# cpp-sfml

./: .gitignore  CMakeLists.txt  CMakeLists.txt3  README.md  README.txt  assets.txt  config.txt  game_config.txt
images/: assets.txt
project_1/: CMakeLists.txt
project_2/: Entity.h  EntityManager.cpp  Game.h  Utils.cpp  Vec2.cpp  main.cpp
simple_test_game/: main.cpp
src/: Animation.cpp  Assets.cpp  Components.h  Entity.cpp  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameEngine.cpp  Physics.cpp  Physics.h  Scene_Menu.cpp  Scene_Play.cpp  Scene_Play.h  Utils.cpp  Utils.h  Vec2.cpp  Vec2.h  main.cpp  vec2.cpp  vec2.h
